k3d-multicluster-playground/fulfillment-httproutes.yaml
apiVersion: v1
kind: Service
metadata:
  name: fulfillment
  namespace: orders
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: orders-traffic-split
  namespace: orders
spec:
  parentRefs:
    - name: fulfillment
      kind: Service
      group: core
      namespace: orders
      port: 80
  rules:
    - backendRefs:
      - name: "fulfillment-cluster-a1"
        port: 80
        weight: 50
        group: ""
        kind: Service
      - name: "fulfillment-cluster-a2"
        port: 80
        weight: 50
        group: ""
        kind: Service
      - name: "fulfillment-cluster-a3"
        port: 80
        weight: 50
        group: ""
        kind: Service
